# si-docgen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  eval_out.txt  pyproject.toml
.claude/: launch.json
backend/app/: cli.py  config.py  exceptions.py  onboarding.py
backend/templates/: interface_spec.xlsx  mockup.html.j2  proposal.pptx  requirement_spec.docx  rtm.xlsx  screen_spec.pptx  table_spec.xlsx  test_scenario.xlsx  user_manual.docx  wbs.xlsx
docs/: TASKS.md
frontend/: pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppFooter.tsx  AppHeader.tsx  Icon.tsx  Sidebar.tsx  Topbar.tsx
frontend/lib/: api.ts  menus.ts  review.ts
scripts/eval/: eval_interface_spec.py  eval_proposal.py  eval_requirement_spec.py  eval_screen_spec.py  eval_table_spec.py  eval_test_scenario.py  eval_user_manual.py  eval_wbs.py
scripts/templates/: build_interface_spec_template.py  build_proposal_template.py  build_requirement_spec_template.py  build_rtm_template.py  build_screen_spec_template.py  build_table_spec_template.py  build_test_scenario_template.py  build_user_manual_template.py  build_wbs_template.py
tests/golden/: test_docx_renderer.py  test_interface_spec_renderer.py  test_pptx_mockup.py  test_proposal_renderer.py  test_rtm_renderer.py  test_table_spec_renderer.py  test_user_manual_renderer.py  test_wbs_renderer.py  test_xlsx_renderer.py
tests/unit/: test_api_chain_job.py  test_api_edit_specs.py  test_api_events.py  test_api_health.py  test_api_interface_spec_job.py  test_api_jobs.py  test_api_llm_settings.py  test_api_proposal_job.py  test_api_render.py  test_api_requirement_job.py  test_api_scenario.py  test_api_table_spec_job.py  test_api_templates.py  test_api_user_manual_job.py  test_api_wbs_job.py  test_chain_requirements.py  test_chain_traceability.py  test_chunking.py  test_db_models.py  test_generate_chain.py  test_generate_interface_spec.py  test_generate_pipeline.py  test_generate_proposal.py  test_generate_requirement_spec.py  test_generate_screen_spec.py  test_generate_table_spec.py  test_generate_user_manual.py  test_generate_wbs.py  test_interface_spec_schema.py  test_llm_generate.py  test_mockup_html.py  test_onboarding.py  test_prompts.py  test_proposal_schema.py  (+12 more)
(+88 files in other folders)
