# si-docgen — 한국 SI 표준 산출물 자동 생성기
# Python 의존성은 uv로 관리한다 (frontend는 pnpm 별도 관리).

[project]
name = "si-docgen"
version = "0.1.0"
description = "한국 SI 프로젝트 표준 산출물(테스트시나리오, 요구사항정의서, 화면정의서 등) LLM 기반 자동 생성기"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=49.0.0",
    "docxtpl>=0.20.2",
    "fastapi>=0.136.3",
    "holidays>=0.64",
    "litellm>=1.88.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.50",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
si-docgen = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 패키지는 backend/app 에 위치하지만 임포트 이름은 app 이다
packages = ["backend/app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]
# Alembic 자동생성 마이그레이션은 린트 대상에서 제외 (도구가 생성·관리)
extend-exclude = ["backend/app/db/migrations/versions"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 테스트에서 `import app.…` 형태로 backend 패키지를 임포트하기 위한 경로 설정
pythonpath = ["backend"]
